--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ajv": "8.12.0",
     "ajv-formats": "2.1.1",
     "ajv-i18n": "4.2.0",
+    "archpkg": "^1.0.34",
     "axios": "0.21.4",
     "core-js": "3.26.1",
     "dateformat": "3.0.3",
@@ -85,6 +86,7 @@
     "jest-environment-jsdom": "29.4.1",
     "jest-test-gen": "1.4.3",
     "nodemon": "2.0.20",
+    "object-hash": "3.0.0",
     "postcss-loader": "2.1.6",
     "raw-loader": "4.0.2",
     "redis": "4.6.10",
@@ -99,8 +101,7 @@
     "vue-template-compiler": "2.7.14",
     "webpack-bundle-analyzer": "4.8.0",
     "webpack-pwa-manifest": "4.3.0",
-    "yo": "4.3.0",
-    "object-hash": "3.0.0"
+    "yo": "4.3.0"
   },
   "overrides": {
     "es5-ext": "0.10.53"
