--- a/public/metamodel/dochub/entities/contexts/plantuml.yaml
+++ b/public/metamodel/dochub/entities/contexts/plantuml.yaml
@@ -132,7 +132,7 @@ entities:
             "dh-focus-id":
               title: Идентификатор требующий подсветку
               type: string
-              pattern: ^[0-9a-zA-Z][a-zA-Z0-9_-]*(\.[a-zA-Z][a-zA-Z0-9_-]*)*$
+              pattern: ^[0-9a-zA-Z][a-zA-Z0-9_-]*(\.[a-zA-Z0-9][a-zA-Z0-9_-]*)*$
           required:
             - dh-context-id
         type: plantuml
