small fix env variable

--- a/example.env
+++ b/example.env
@@ -168,7 +168,7 @@
 #     - '^ecogroup.berezka.kb[a-zA-Z\._0-9]*$'
 #   default:
 #     - '^kadzo\.v2023\.data_objects*$'
-#VUE_APP_DOCHUB_ROLES=workspace/sberauto/roles.yaml
+#VUE_APP_DOCHUB_ROLES=file:///workspace/sberauto/roles.yaml
 
 # Варианты использования:
 #   documentation/roles.yaml - (F / FB) Относительная ссылка на файл расположенный в папке @/public/
