--- a/public/documentation/docs/manual/root.yaml
+++ b/public/documentation/docs/manual/root.yaml
@@ -131,7 +131,7 @@ docs:
         - dochub.front
       source: config/deployment.md
     dochub.rules:
-      location: Dochub/Руководство/Ролевая модель
+      location: DocHub/Руководство/Ролевая модель
       description: Ролевая модель
       type: markdown
       source: entities/rules.md
