--- a/plugins/bpmnjs/package.json
+++ b/plugins/bpmnjs/package.json
@@ -12,7 +12,6 @@
   "author": "R.Piontik",
   "license": "Apache-2.0",
   "dependencies": {
-    "bpmn-js": "^17.6.4",
-    "vue-bpmn": "^0.3.0"
+    "bpmn-js": "^17.6.4"
   }
 }
