Добавлена переменная среды для включения html в markdown

--- a/example.env
+++ b/example.env
@@ -153,7 +153,9 @@
 # По умолчанию кластер выключен (off).
 # VUE_APP_DOCHUB_CLUSTER= on / off
 
-
+# (FB) Включение поддержки HTML тэгов в markdown документах
+# По умолчанию поддержка выключена (off).
+# VUE_APP_DOCHUB_MARKDOWN_HTML= on / off
 
 # ***********************************************************
 #                   Примеры конфигурирования
