--- a/public/documentation/docs/manual/docs/root.yaml
+++ b/public/documentation/docs/manual/docs/root.yaml
@@ -114,6 +114,18 @@ docs:
       - dochub.front.spa.blank
       - dochub.front.spa.blank.doc
     source: charts.md
+  dochub.bpmn:
+    location: DocHub/Руководство/Документы/BPMN
+    description: BPMN диаграммы
+    autor: R.Piontik
+    type: markdown
+    subjects:
+      - dochub.front
+      - dochub.front.spa
+      - dochub.front.spa.blank
+      - dochub.front.spa.blank.doc
+    source: bpmn.md
+
   # *****************************************  
   #            Примеры документов
   # *****************************************  
@@ -383,6 +395,10 @@ docs:
       - dochub.front.spa.blank
       - dochub.front.spa.blank.doc
     source: examples/asyncapi.yaml
+  dochub.example.bpmn:
+    location: DocHub/Руководство/Документы/BPMN/Простой пример
+    type: bpmnjs
+    source: examples/bpmn.xml
   # *****************************************  
   #                 Шаблоны
   # *****************************************  
