role model fix docs

--- a/example.env
+++ b/example.env
@@ -157,6 +157,8 @@
 #                   Пример конфигурирования ролевой модели
 # ***********************************************************
 # (B) Режим backend
+# Если "y", то включается режим работы с ролевой модель.
+# VUE_APP_DOCHUB_ROLES_MODEL= y / n
 # Указываем путь до манифеста с описанием ролей
 # Пример описания:
 # roles:
