--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,28 +6,33 @@
 		"jest": true
 	},
 	"globals": {
-    "DocHub": true,
+		"DocHub": true,
 		"vscode": "readonly",
 		"Zopfli": "readonly"
 	},
-	"ignorePatterns": ["**/public/libs/*.js", "**/libs/*.js"],
-  "parser": "vue-eslint-parser",
-  "parserOptions": {
-    "parser": "@typescript-eslint/parser",
-    "ecmaVersion": 10,
-    "sourceType": "module",
-    "extraFileExtensions": [".vue"],
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "plugin:vue/recommended",
-    "plugin:vue/base",
-    "plugin:vue/essential",
-    "eslint:recommended"
-  ],
+	"ignorePatterns": [
+		"**/public/libs/*.js",
+		"**/libs/*.js"
+	],
+	"parser": "vue-eslint-parser",
+	"parserOptions": {
+		"parser": "@typescript-eslint/parser",
+		"ecmaVersion": 10,
+		"sourceType": "module",
+		"extraFileExtensions": [
+			".vue"
+		],
+		"ecmaFeatures": {
+			"jsx": true
+		}
+	},
+	"extends": [
+		"plugin:@typescript-eslint/recommended",
+		"plugin:vue/recommended",
+		"plugin:vue/base",
+		"plugin:vue/essential",
+		"eslint:recommended"
+	],
 	"overrides": [
 		{
 			"files": [
@@ -40,20 +45,20 @@
 		}
 	],
 	"plugins": [
-    "@typescript-eslint",
-    "vue"
+		"@typescript-eslint",
+		"vue"
 	],
 	"rules": {
-    "@typescript-eslint/no-unused-vars": [
-      2,
-      {
-        "args": "none"
-      }
-    ],
-    "@typescript-eslint/no-this-alias": "off",
-    "@typescript-eslint/no-var-requires": "off",
-    "@typescript-eslint/no-empty-function": "warn",
-    "@typescript-eslint/no-explicit-any": 0,
+		"@typescript-eslint/no-unused-vars": [
+			2,
+			{
+				"args": "none"
+			}
+		],
+		"@typescript-eslint/no-this-alias": "off",
+		"@typescript-eslint/no-var-requires": "off",
+		"@typescript-eslint/no-empty-function": "warn",
+		"@typescript-eslint/no-explicit-any": 0,
 		"comma-dangle": [
 			"error",
 			"never"
@@ -62,7 +67,7 @@
 			"error",
 			"always"
 		],
-    "no-console": "warn",
+		"no-console": "warn",
 		"no-debugger": "warn",
 		"quotes": [
 			"warn",
