--- a/example.env
+++ b/example.env
@@ -109,10 +109,10 @@
 # VUE_APP_DOCHUB_RENDER_CORE=ELK
 # С версии v3.0.2 конфигурирование осуществляется через параметры сущности "contexts" см. документацию
 
-# (F / FB) [КЭШ] Включить/отключить кэширование(NONE | HEAD | GET) - По умолчанию NONE
+# !!!! УСТАРЕЛО !!!!! (F / FB) [КЭШ] Включить/отключить кэширование(NONE | HEAD | GET) - По умолчанию NONE
 # VUE_APP_DOCHUB_CACHE=NONE
 
-# (F / FB) [УРОВЕНЬ кэширования] (1 | 2) - По умолчанию 1
+# !!!! УСТАРЕЛО !!!!! (F / FB) [УРОВЕНЬ кэширования] (1 | 2) - По умолчанию 1
 # 1 - [low level] кэш сетевых запросов(requests)
 # 2 - [high level] full кэш(уровень 1 + манифест)
 # VUE_APP_DOCHUB_CACHE_LEVEL=1
