--- a/plugins/main/package.json
+++ b/plugins/main/package.json
@@ -10,7 +10,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "axios": "1.7.2",
-    "vue-cookie": "^1.1.4",
+    "js-sha256": "0.11.0",
+    "vue-cookie": "1.1.4",
     "yaml": "2.4.5"
   }
 }
