--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -122,13 +122,7 @@
 			}
 		],
 		"vue/singleline-html-element-content-newline": "off",
-		"vue/v-bind-style": [
-			"error",
-			"longform"
-		],
-		"vue/v-on-style": [
-			"error",
-			"longform"
-		]
+		"vue/v-bind-style": "off",
+		"vue/v-on-style": "off"
 	}
 }
