--- a/plugins/main/package.json
+++ b/plugins/main/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "axios": "1.7.2",
+    "object-hash": "^3.0.0",
     "vue-cookie": "1.1.4",
     "yaml": "2.4.5"
   }
