Добавл плагин для Markdown. Реализовал редактирование markdown на портале.

--- a/public/metamodel/dochub/entities/documents/blank.yaml
+++ b/public/metamodel/dochub/entities/documents/blank.yaml
@@ -1,4 +1,4 @@
-# Расширение сущности "Contexts" для генерации PlantUML диаграмм
+# Расширение сущности "Documents" для генерации PlantUML диаграмм
 entities:
   docs:
     # Основное представление документов
