--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,7 @@
     },
     "sourceMap": true,
     "importHelpers": true,
-    "jsx": "preserve"
+    "jsx": "react"
   },
   "include": ["src", "config.d.ts"],
   "exclude": ["node_modules", "src/backend"]
